# commet

./: CLAUDE.md  Cargo.toml  Justfile
.github/workflows/: ci.yml
src/: cli.rs  clipboard.rs  doctor.rs  editor.rs  error.rs  learning.rs  lib.rs  log.rs  main.rs  prompt.rs
src/cmd/: doctor.rs  forget.rs  generate.rs  history.rs  mod.rs  providers.rs  setup.rs
src/config/: discover.rs  edit.rs  merge.rs  mod.rs  schema.rs  set_override.rs
src/git/: diff.rs  mod.rs  stage_tracker.rs  wrappers.rs
src/provider/: anthropic.rs  base.rs  mock.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
src/tui/: files.rs  mod.rs  preview.rs  run.rs  setup.rs  spinner.rs  terminal.rs  theme.rs
tests/: cli_help.rs  config_edit.rs  config_load.rs  config_show.rs  doctor.rs  e2e_flags.rs  git_smoke.rs  setup.rs
