[package]
name = "commitcrafter"
version = "0.1.0"
edition = "2024"
description = "AI-powered git commit message CLI with a ratatui TUI"
license = "MIT"
repository = "https://github.com/Jay-0331/commitcrafter"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "commit", "ai", "tui", "llm"]

[[bin]]
name = "cc"
path = "src/main.rs"

[lib]
name = "commitcrafter"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
globset = "0.4"
httpdate = "1"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
