[package]
name = "commet"
version = "0.1.0"
edition = "2024"
description = "AI-powered git commit message CLI with a ratatui TUI"
license = "MIT"
repository = "https://github.com/Jay-0331/commet"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "commit", "ai", "tui", "llm"]

[[bin]]
name = "commet"
path = "src/main.rs"

[lib]
name = "commet"
path = "src/lib.rs"

[features]
# Compile the offline env-driven mock provider into the library so
# integration tests (and `cargo run --features mock`) can bypass HTTP.
mock = []

[dependencies]
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }
clap = { version = "4", features = ["derive"] }
globset = "0.4"
httpdate = "1"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
supports-color = "3"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
